 /*
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless  by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package pspb;

message LogEntry {
	string key = 1;
	bytes  value = 2;
}

enum TableType {
	EntityTable = 0;
	BlobTable = 1;
	MessageTable = 2;
}

message MixedLog {
	repeated uint32 offsets = 1;
}

message MetaStreamData {
	uint64 logStreamID  = 1;
	uint64 rawStreamID = 2;
	uint64 blobStreamID = 3;
	TableType tableType = 4;
	//pointers (extent+offset) into those streams for where to start operating in those streams
}